--- a/client/style.css
+++ b/client/style.css
@@ -26,8 +26,8 @@ body {
   flex: 1;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
-
+  overflow: auto;
+  
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -118,6 +118,8 @@ form {
   margin: 0 auto;
   padding: 10px;
   background: #40414F;
+  position:fixed;
+  bottom: 0; 
 
   display: flex;
   flex-direction: row;
