--- a/client/style.css
+++ b/client/style.css
@@ -1,20 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Alegreya Sans", sans-serif;
+  font-family: 'DotGothic16', sans-serif;
 }
 
 body {
-  background: #343541;
+  background: #020795;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #020795;
+;
 
   display: flex;
   flex-direction: column;
@@ -25,8 +26,8 @@ body {
 #chat_container {
   flex: 1;
   width: 100%;
-  height: 100%;
-  overflow: auto;
+  height: 80%;
+  overflow-y: scroll;
   
   display: flex;
   flex-direction: column;
@@ -89,7 +90,7 @@ body {
 .message {
   flex: 1;
 
-  color: #dcdcdc;
+  color: #ff00b3;
   font-size: 20px;
 
   max-width: 100%;
